--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,3 +1,4 @@
+
 <div>
   <div>
     <h4>
@@ -7,31 +8,37 @@
 </div>
 
 <hr>
-  
+
+<div class="progress">
+  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-label="Basic example" style="width: <%= 100*@list_of_cards.uniq.count/@the_album.cards %>%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+<hr>
+
   <div>
     <h5>Cards missing to complete album: <%= @the_album.cards - @list_of_cards.uniq.count %> | People collecting album: <%= @list_of_collectors.count + 1 %> | Album completion: <%= 100*@list_of_cards.uniq.count/@the_album.cards %>% </h5>
-    <div class="progress">
-        <div class="progress-bar" role="progressbar" aria-label="Basic example" style="width: <%= 100*@list_of_cards.uniq.count/@the_album.cards %>%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
+      
     <div>
       <form action="/insert_collection" method="post">
+      
         <label for="id_user_box"></label>
         <input type="hidden" value="<%= session[:user_id] %>" id="id_user_box" name="query_id_user">
      
         <label for="id_album_box"></label>
         <input type="hidden" value="<%= @the_album.id %>" id="id_album_box" name="query_id_album">
-      
-        <label for="card_number_box"></label>
-        <input type="number" id="card_number_box" name="query_card_number" min="1" max=<%= @the_album.cards %> placeholder="Card #">
         
-        <button class="btn btn-primary btn-sm">
-          Add card
-        </button>
+        <label for="card_number_box"></label>
+        
+        <div class="input-group mb-3">
+          <input class="form-control" type="number" id="card_number_box" name="query_card_number" min="1" max=<%= @the_album.cards %> placeholder="Card number" aria-describedby="button-add_card" >
+          <button class="btn btn-primary btn-sm" id="button-add_card" >Add card</button>
+        </div>
+
       </form>
     </div>
 
     <div>
       <form action="/delete_collection" method="post">
+
         <label for="id_user_box"></label>
         <input type="hidden" value="<%= session[:user_id] %>" id="id_user_box" name="query_id_user">
       
@@ -39,9 +46,11 @@
         <input type="hidden" value="<%= @the_album.id %>" id="id_album_box" name="query_id_album">
       
         <label for="card_number_box"></label>
-        <input type="number" id="card_number_box" name="query_card_number" min="1" max=<%= @the_album.cards %> placeholder="Card #">
-        
-        <button class="btn btn-danger btn-sm">Delete card</button>
+
+        <div class="input-group mb-3">
+          <input class="form-control" type="number" id="card_number_box" name="query_card_number" min="1" max=<%= @the_album.cards %> placeholder="Card number" aria-describedby="button-delete_card">        
+          <button class="btn btn-danger btn-sm" id="button-delete_card">Delete card</button>
+        </div>
       </form>
     </div>
   </div>
@@ -50,30 +59,30 @@
 
 <div>
   <div>
-    <h2></h2>
-    <table border="1">
-      <tr>
-        <th>
-          # Card
-        </th>
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>
+            # Card
+          </th>
 
-        <th>
-          You have:
-        </th>
+          <th>
+            Your inventory:
+          </th>
 
-        <th>
-          Repeated card:
-        </th>
+          <th>
+            Users who have card repeated:
+          </th>
 
-        <th>
-          Missing card:
-        </th>
+          <th>
+            Users who don't hold card:
+          </th>
 
-        <th>
-          
-        </th>
-      </tr>
-
+          <th>
+            
+          </th>
+        </tr>
+      </thead>
       <% @the_album.cards.times do |a_card| %>
       <tr>
         <td>
@@ -133,23 +142,26 @@
   <div>
     <div>
       <h5>
-        Edit album (ADMIN)
+        Modify album (ADMIN)
       </h5>
 
       <form action="/modify_album/<%= @the_album.id %>"  method="post" >
-        <div>
-          <label for="name_box">Name</label>
-          <input type="text" id="name_box" name="query_name" value="<%= @the_album.name %>">
+        <div class="input-group mb-3">
+          <span class="input-group-text">Name of album:</span>
+          <input class="form-control" type="text" id="name_box" name="query_name" value="<%= @the_album.name %>">
+          <label for="name_box"></label>
         </div>
 
-        <div>
-          <label for="cards_box">Cards</label>
-          <input type="text" id="cards_box" name="query_cards" value="<%= @the_album.cards %>">
+        <div class="input-group mb-3">
+          <span class="input-group-text">Number of cards in album:</span>
+          <input class="form-control" type="number" id="cards_box" name="query_cards" value="<%= @the_album.cards %>">
+          <label for="cards_box"></label>
         </div>
         
         <button class="btn btn-primary btn-sm">Update album</button>
         
       </form>
+      <hr>
       <div>
         <form action="/delete_album/<%= @the_album.id %>">
           <button class="btn btn-danger btn-sm">Delete album</button>
