--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -1,14 +1,14 @@
-<div>
+<div class="text-center">
   <div>
     <h4>
-      Find your album
+      Find my album
     </h4>
   </div>
 </div>
 
 <hr>
 
-<div>
+<div class="text-center">
   <div>
     <table class="table table-hover">
       <thead>
@@ -22,6 +22,7 @@
           </th scope="col">
 
           <th scope="col">
+            Action
           </th scope="col">
         </tr>
       </thead>
@@ -42,13 +43,13 @@
             <% if @list_of_collections.include?(an_album.id) %>
               
               <form action="/albums/<%= an_album.id %>">
-                <button class="btn btn-primary btn-sm">Go to your album</button>
+                <button class="btn btn-primary btn-sm" style="width: 120px;">Go to my album</button>
               </form>
               
 
             <% else %>
               <form action="/link_collection/<%= an_album.id %>">
-                <button class="btn btn-secondary btn-sm">Add album</button>
+                <button class="btn btn-secondary btn-sm" style="width: 120px;">Add album</button>
               </form>
               
             <% end %>
