--- a/app/views/exchanges/index.html.erb
+++ b/app/views/exchanges/index.html.erb
@@ -1,7 +1,7 @@
 <div>
   <div>
     <h4>
-      Your exchanges
+      My exchanges
     </h4>
   </div>
 </div>
@@ -16,31 +16,31 @@
     <table class="table table-hover">
       <tr>
 
-        <th>
+        <th width="14%">
           Album
         </th>
 
-        <th>
-          You get
+        <th width="14%">
+          I get
         </th>
 
-        <th>
+        <th width="14%">
           From
         </th>
 
-        <th>
-          You give
+        <th width="14%">
+          I give
         </th>
 
-        <th>
-          Your inventory
+        <th width="14%">
+          My inventory
         </th>
 
-        <th>
+        <th width="14%">
           Date
         </th>
 
-        <th>
+        <th width="14%">
           Status
         </th>
 
@@ -75,7 +75,7 @@
         </td>
 
         <td>
-          <form action="/close_exchange" method="post">
+          <form action="/close_exchange" method="post" style="display: inline-block;">
             
               <label for="id_exchange_box"></label>
               <input type="hidden" value="<%= an_exchange.id %>" id="id_exchange_box" name="query_exchange_id">
@@ -86,7 +86,7 @@
             <button class="btn btn-primary btn-sm">Accept</button>
           </form>
 
-          <form action="/close_exchange" method="post">
+          <form action="/close_exchange" method="post" style="display: inline-block;">
             
               <label for="id_exchange_box"></label>
               <input type="hidden" value="<%= an_exchange.id %>" id="id_exchange_box" name="query_exchange_id">
@@ -111,31 +111,31 @@
     <table class="table table-hover">
       <tr>
 
-        <th>
+        <th width="14%">
           Album
         </th>
 
-        <th>
-          You get
+        <th width="14%">
+          I get
         </th>
 
-        <th>
+        <th width="14%">
           From
         </th>
 
-        <th>
-          You give
+        <th width="14%">
+          I give
         </th>
 
-        <th>
-          Your inventory
+        <th width="14%">
+          My inventory
         </th>
 
-        <th>
+        <th width="14%">
           Date
         </th>
 
-        <th>
+        <th width="14%">
           Status
         </th>
 
@@ -194,31 +194,31 @@
     <table class="table table-hover">
       <tr>
 
-        <th>
+        <th width="14%">
           Album
         </th>
 
-        <th>
-          Sender
+        <th width="14%">
+          Requester
         </th>
 
-        <th>
-          Sender gives
+        <th width="14%">
+          Requester gives
         </th>
 
-        <th>
-          Receiver
+        <th width="14%">
+          Requestee
         </th>
 
-        <th>
-          Receiver gives
+        <th width="14%">
+          Requestee gives
         </th>
 
-        <th>
+        <th width="14%">
           Date
         </th>
 
-        <th>
+        <th width="14%">
           Status
         </th>
         
