--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">Collecti</a>
+          <a class="navbar-brand" href="/"><strong>Collecti</strong></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -37,7 +37,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="/exchanges">Your exchanges</a>
+                  <a class="nav-link" href="/exchanges">My exchanges</a>
                 </li>
 
                 <li class="nav-item dropdown">
@@ -45,7 +45,7 @@
                     My Profile
                   </a>
                   <div class="dropdown-menu">
-                    <a class="dropdown-item" href="/exchanges">Your exchanges</a>
+                    <a class="dropdown-item" href="/exchanges">My exchanges</a>
                     <div class="dropdown-divider"></div>
                   </div>
                 </li>
