--- a/app/views/user_authentication/sign_in.html.erb
+++ b/app/views/user_authentication/sign_in.html.erb
@@ -1,23 +1,29 @@
-<h4>Sign in</h4>
+<div class="text-center">
+  <h2>The ultimate trading card platform</h2>
 
-<form action="/user_verify_credentials" method="post">
-  <div class="form-floating mb-3">
-    <input class="form-control" id="email_box" name="query_email" placeholder="name@example.co" type="email">
-    <label for="email_box">Email address</label>
-  </div>
+  <hr>
 
-  <div>
-    <input class="form-control" id="password_box" name="query_password" placeholder="Enter your password..." type="password">
-    <label for="password_box"></label>
-  </div>
+</div>
+  <h4>Sign in</h4>
 
-  <button class="btn btn-primary btn-sm">
-    Sign in
-  </button>
-</form>
+  <form action="/user_verify_credentials" method="post">
+    <div class="form-floating mb-3">
+      <input class="form-control" id="email_box" name="query_email" placeholder="name@example.co" type="email">
+      <label for="email_box">Email address</label>
+    </div>
 
-<hr>
+    <div>
+      <input class="form-control" id="password_box" name="query_password" placeholder="Enter your password..." type="password">
+      <label for="password_box"></label>
+    </div>
 
-<p>
-  Or, <a href="/user_sign_up">sign up</a> instead.
-</p>
+    <button class="btn btn-primary btn-sm">
+      Sign in
+    </button>
+  </form>
+
+  <hr>
+
+  <p>
+    Or, <a href="/user_sign_up">sign up</a> instead.
+  </p>
