--- a/app/views/user_authentication/sign_in.html.erb
+++ b/app/views/user_authentication/sign_in.html.erb
@@ -1,5 +1,7 @@
 <div class="text-center">
-  <h2>The ultimate trading card platform</h2>
+  
+  <em><h1>Collecti</h1></em>
+  <h4>The ultimate <span class="badge bg-primary rounded-pill">trading card</span> marketplace  </h4>
 
   <hr>
 
