--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -19,6 +19,12 @@
     </div>
   </div>
 
+  <hr>
+
+  <div class="text-center">
+  <div style="padding-top: 10px;"><h4>My trading platform</h4></div>
+
+
   <div style="display: inline-flex;">
     <div style="margin-right: 10px;">
       <form action="/insert_collection" method="post">
@@ -59,11 +65,8 @@
     </div>
   </div>
 
-  <hr>
-  <p>My collection</p>
-
-  <div>
     <div>
+  
       <table class="table table-hover">
         <thead>
           <tr>
@@ -126,11 +129,11 @@
           <td>
             <% if number_of_collectors_repeated == 1 %>
                 <form action="/albums/<%= @the_album.id %>/<%= card_number %>" method="get">
-                  <button class="btn btn-secondary btn-sm" style="min-width: 120px;">Explore trade</button>
+                  <button class="btn btn-primary btn-sm" style="min-width: 120px;">Start a trade</button>
                 </form>
             <% elsif number_of_collectors_repeated != 0 %>
                 <form action="/albums/<%= @the_album.id %>/<%= card_number %>" method="get">
-                  <button class="btn btn-secondary btn-sm" style="min-width: 120px;">Explore trades</button>
+                  <button class="btn btn-primary btn-sm" style="min-width: 120px;">Start a trade</button>
                 </form>
             <% else end %>              
           </td>
@@ -140,8 +143,6 @@
       </table>
     </div>
   </div>
-
-</div>
 
 <hr>
 
@@ -175,5 +176,7 @@
       </form>
     </div>
   </div>
-  <hr>
+
 <% else end %>
+
+</div>
