--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= csp_meta_tag %>
 
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <%= stylesheet_link_tag 'application', media: 'all' %>
 
   </head>
 
   <body>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <div>
     
       <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -31,27 +31,20 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                           
               <% if session[:user_id] != nil %>
-              
+                              
                 <li class="nav-item">
-                  <a class="nav-link"> Welcome, <%= @current_user.first_name %></a>
+                  <a class="nav-link" href="/">Find an album</a>
                 </li>
-
-                <li class="nav-item">
-                  <a class="nav-link" href="/exchanges">My exchanges</a>
-                </li>
-
+                
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    My Profile
+                     <%= @current_user.first_name %>
                   </a>
                   <div class="dropdown-menu">
                     <a class="dropdown-item" href="/exchanges">My exchanges</a>
                     <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="/user_sign_out">Sign out</a>
                   </div>
-                </li>
-                
-                <li class="nav-item">
-                  <a class="nav-link" href="/user_sign_out">Sign out</a>
                 </li>
 
               <% else %>
@@ -64,17 +57,37 @@
               <% end %>
               
             </ul>
-            
           </div>
         </div>
       </nav>  
 
     </div>
+
+    <% if notice %>
+      <div class="alert alert-dismissible alert-secondary">
+        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+        <strong>Success!</strong>
+            
+              <%= notice %>    
+        
+      </div>
+    <% end %>
+  
+    <% if alert %>
+      <div class="alert alert-dismissible alert-warning">
+        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+        <strong>Warning!</strong>
+            
+              <%= alert %>
+            
+      </div>
+    <% end %>
     
     <div class="container py-5">
       <%= yield %>
     </div>
   </body>
-
+  
+  <hr>
   <div class="text-center" ><small><em><p>Copyright: Carlos Maier 2023</p></em></small></div>
 </html>
