--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -1,7 +1,7 @@
 <div class="text-center">
   <div>
     <h4>
-      My album collection
+      Start collecting!
     </h4>
   </div>
 </div>
@@ -18,7 +18,7 @@
           </th scope="col">
 
           <th scope="col">
-            Cards
+            Size
           </th scope="col">
 
           <th scope="col">
@@ -35,7 +35,7 @@
           </td>
 
           <td>
-            <%= an_album.cards %>
+            <%= an_album.cards %> cards
           </td>
 
           <td>
