--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,7 @@
                      <%= @current_user.first_name %>
                   </a>
                   <div class="dropdown-menu">
+                    <a class="dropdown-item" href="/edit_user_profile">My profile</a>
                     <a class="dropdown-item" href="/exchanges">My exchanges</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="/user_sign_out">Sign out</a>
@@ -76,7 +77,7 @@
     <% if alert %>
       <div class="alert alert-dismissible alert-warning">
         <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-        <strong>Warning!</strong>
+        
             
               <%= alert %>
             
