--- a/app/views/user_authentication/edit_profile.html.erb
+++ b/app/views/user_authentication/edit_profile.html.erb
@@ -1,40 +1,67 @@
-<div >
+<div class="text-center">
   <h5>
-    Edit User Account
+    My profile
   </h5>
 
-  <div>
+  <div style="padding-top: 10px">
     <form action="/modify_user" method="post">
-      <div>
-        <label for="email_box">Email</label>
-        <input id="email_box" name="query_email" value="<%= @current_user.email %>">
+      
+      <div style="display: inline-flex;">
+        <div style="margin-right: 10px;" class="input-group mb-3" >
+          <span class="input-group-text">First name</span>
+          <input class="form-control" id="first_name_box" name="query_first_name" value="<%= @current_user.first_name %>">
+          <label for="first_name_box"></label>
+        </div>
+        
+        <div class="input-group mb-3" >
+          <span class="input-group-text">Last name</span>
+          <input class="form-control" id="last_name_box" name="query_last_name" value="<%= @current_user.last_name %>">
+          <label for="last_name_box"></label>
+        </div>
       </div>
-      <div>
-        <label for="first_name_box">First name</label>
-        <input id="first_name_box" name="query_first_name" value="<%= @current_user.first_name %>">
-      </div>
-      <div>
-        <label for="last_name_box">Last name</label>
-        <input id="last_name_box" name="query_last_name" value="<%= @current_user.last_name %>">
-      </div>
-      <div>
-        <label for="zip_code_box">Zip code</label>
-        <input id="zip_code_box" name="query_zip_code" value="<%= @current_user.zip_code %>">
+      
+      <br> 
+
+      <div style="display: inline-flex;">
+        <div style="margin-right: 10px;"class="input-group mb-3" >
+          <span class="input-group-text">Zip Code</span>
+          <input class="form-control" type="number" id="zip_code_box" name="query_zip_code" value="<%= @current_user.zip_code %>">
+          <label for="zip_code_box"></label>
+        </div>
+
+        <div class="input-group mb-3" >
+          <span class="input-group-text">Email address</span>
+          <input class="form-control" id="email_box" name="query_email" value="<%= @current_user.email %>">
+          <label class="form-label mt-4" for="email_box"></label>
+        </div>
       </div>
 
-      <div>
-        <label for="password_box">Password</label>
-        <input id="password_box" name="query_password" placeholder="Choose a password..." type="password">
+      <br> 
+      
+      <div style="display: inline-flex;">
+        <div style="margin-right: 10px;" class="input-group mb-3" >
+          <span class="input-group-text">Password</span>
+          <input class="form-control" id="password_box" name="query_password" placeholder="New password" type="password">
+          <label for="password_box"></label>
+        </div>
+      
+        <div class="input-group mb-3" >
+          <span class="input-group-text">Confirm password</span>
+          <input class="form-control" id="password_confirmation_box" name="query_password_confirmation" placeholder="" type="password">
+          <label for="password_confirmation_box"></label>
+        </div>
       </div>
-    
-      <div>
-        <label for="password_confirmation_box">Password Confirmation</label>
-        <input id="password_confirmation_box" name="query_password_confirmation" placeholder="Confirm your password..." type="password">
-      </div>
+      <br>
+      
+      <div style="display: inline-flex;">
+        <button style="margin-right: 10px;" class="btn btn-primary btn-sm">
+          Update account
+        </button>
 
-      <button class="btn btn-primary btn-sm">
-        Update account
-      </button>
     </form>
+      <button class="btn btn-danger btn-sm" disabled>
+        Delete account
+      </button>
+      </div>
   </div>
 </div>
