--- a/app/views/user_authentication/edit_profile_with_errors.html.erb
+++ b/app/views/user_authentication/edit_profile_with_errors.html.erb
@@ -1,54 +1,55 @@
 <div >
+
+  <% if @user.errors.any? %>
+    <% @user.errors.full_messages.each do |message| %>
+      <div class="alert">
+        <%= message %>
+      </div>
+    <% end %>
+  <% end %>
+
+  <div class="text-center">
   <h5>
     Edit User Account
   </h5>
 
-  <% if @user.errors.any? %>
-  <% @user.errors.full_messages.each do |message| %>
-    <div class="alert">
-      <%= message %>
-    </div>
-  <% end %>
-  <% end %>
-  <div>
+  <div style="padding-top: 10px">
     <form action="/modify_user" method="post">
-              
-      <div>
-        <label for="email_box">Email</label>
-          
-        <input id="email_box" name="query_email" value="<%= @current_user.email %>">
-          
+      
+      <div class="input-group mb-3" >
+        <span class="input-group-text">First name</span>
+        <input class="form-control" id="first_name_box" name="query_first_name" value="<%= @current_user.first_name %>">
+        <label for="first_name_box"></label>
       </div>
-                                    
-      <div>
-        <label for="first_name_box">First name</label>
-          
-        <input id="first_name_box" name="query_first_name" value="<%= @current_user.first_name %>">
-          
+      
+      <div class="input-group mb-3" >
+        <span class="input-group-text">Last name</span>
+        <input class="form-control" id="last_name_box" name="query_last_name" value="<%= @current_user.last_name %>">
+        <label for="last_name_box"></label>
       </div>
-                      
-      <div>
-        <label for="last_name_box">Last name</label>
-          
-        <input id="last_name_box" name="query_last_name" value="<%= @current_user.last_name %>">
-          
+      
+      <div class="input-group mb-3" >
+        <span class="input-group-text">Zip Code</span>
+        <input class="form-control" type="number" id="zip_code_box" name="query_zip_code" value="<%= @current_user.zip_code %>">
+        <label for="zip_code_box"></label>
       </div>
-                      
-      <div>
-        <label for="zip_code_box">Zip code</label>
-          
-        <input id="zip_code_box" name="query_zip_code" value="<%= @current_user.zip_code %>">
-          
+
+      <div class="input-group mb-3" >
+        <span class="input-group-text">Email address</span>
+        <input class="form-control" id="email_box" name="query_email" value="<%= @current_user.email %>">
+        <label class="form-label mt-4" for="email_box"></label>
       </div>
-              
-      <div>
-        <label for="password_box">Password</label>
-        <input id="password_box" name="query_password" placeholder="Choose a new password..." type="password">
+
+      <div class="input-group mb-3" >
+        <span class="input-group-text">Password</span>
+        <input class="form-control" id="password_box" name="query_password" placeholder="Choose a password..." type="password">
+        <label for="password_box"></label>
       </div>
     
-      <div>
-        <label for="password_confirmation_box">Password Confirmation</label>
-        <input id="password_confirmation_box" name="query_password_confirmation" placeholder="Confirm your new password..." type="password">
+      <div class="input-group mb-3" >
+        <span class="input-group-text">Confirm password</span>
+        <input class="form-control" id="password_confirmation_box" name="query_password_confirmation" placeholder="Confirm your password..." type="password">
+        <label for="password_confirmation_box"></label>
       </div>
 
       <button class="btn btn-primary btn-sm">
@@ -56,4 +57,6 @@
       </button>
     </form>
   </div>
+</div>
+
 </div>
